# CRISPR-gRNA-Designer

core/: Dockerfile  pyproject.toml
core/src/crispr_designer/: config.py  core.py
core/src/crispr_designer/core/: off_target_analyzer.py  pam_scanner.py  thermodynamic_analyzer.py
core/src/crispr_designer/models/: __init__.py  cas_systems.py  guides.py  off_targets.py  simulation.py
core/src/crispr_designer/utils/: __init__.py  alignment.py  sequence.py
